adicionando pontos turísticos

--- a/Exercicio01/index.html
+++ b/Exercicio01/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="index.css">
-    <title>Document</title>
+    <title>Marco Zero - Recife</title>
   </head>
   <body>
     <header>
@@ -45,6 +45,12 @@
           alt="Pessoas no Marco Zero"
         />
       </section>
+      <section>
+      <h2>Descubra mais pontos turísticos!</h2>
+      <p>
+        Clique <a href="novoindex.html"><span>aqui</span></a> para conhecer outros pontos turísticos do Recife Antigo.
+      </p>
+    </section>
     </main>
 
     <footer>
